# shine-varying

./: README.md  shine-varying.cabal  stack.yaml
src/: Example.hs
src/Graphics/Shine/FRP/: Varying.hs
tests/: index.html  misc.hs  resizeNarwhal.hs
tests/misc.jsexe/: all.js  out.js  out.stats
tests/resizeNarwhal.jsexe/: all.js  out.js  out.stats
